--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -6,9 +6,36 @@ services:
       target: development
     command: pnpm run start:dev api
     env_file:
-      - ./apps/api/.env
+      - ./apps/api/.env.development
     ports:
       - '1111:1111'
     volumes:
       - .:/usr/src/app
       - /usr/src/app/node_modules
+
+  auth:
+    build:
+      context: .
+      dockerfile: ./apps/auth/Dockerfile
+      target: development
+    command: pnpm run start:dev auth
+    env_file:
+      - ./apps/auth/.env.development
+    ports:
+      - '2222:2222'
+    volumes:
+      - .:/usr/src/app
+      - /usr/src/app/node_modules
+
+  # rabbitmq:
+  #   image: rabbitmq:3-management
+  #   container_name: rabbitmq
+  #   hostname: rabbitmq
+  #   volumes:
+  #     - /var/lib/rabbitmq
+  #   ports:
+  #     - '5672:5672'
+  #     - '15672:15672'
+  #   env_file:
+  #     - .env.development
+  
