--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -27,15 +27,27 @@ services:
       - .:/usr/src/app
       - /usr/src/app/node_modules
 
-  # rabbitmq:
-  #   image: rabbitmq:3-management
-  #   container_name: rabbitmq
-  #   hostname: rabbitmq
-  #   volumes:
-  #     - /var/lib/rabbitmq
-  #   ports:
-  #     - '5672:5672'
-  #     - '15672:15672'
-  #   env_file:
-  #     - .env.development
-  
+  patient:
+    build:
+      context: .
+      dockerfile: ./apps/patient/Dockerfile
+      target: development
+    command: pnpm run start:dev patient
+    env_file:
+      - ./apps/patient/.env.development
+    ports:
+      - '3333:3333'
+    volumes:
+      - .:/usr/src/app
+      - /usr/src/app/node_modules
+
+  rabbitmq:
+    image: rabbitmq:3.13.4-management-alpine
+    hostname: rabbitmq
+    volumes:
+      - /var/lib/rabbitmq
+    ports:
+      - '5672:5672'
+      - '15672:15672'
+    env_file:
+      - .env.development
