--- a/apps/auth/.env.production
+++ b/apps/auth/.env.production
@@ -6,3 +6,8 @@ AUTH_DB_PORT=5432
 AUTH_DB_USERNAME=postgres
 AUTH_DB_PASSWORD=postgres
 AUTH_DB_NAME=authdb
+
+RABBITMQ_USERNAME=user
+RABBITMQ_PASSWORD=password
+RABBITMQ_HOST=rabbitmq:5672
+RABBITMQ_AUTH_QUEUE=auth_queue
