--- a/apps/patient/.env.development
+++ b/apps/patient/.env.development
@@ -1,11 +1,14 @@
 PORT=3333
 NODE_ENV=development
 
-PAtIENT_DB_HOST=localhost
-PAtIENT_DB_PORT=5432
-PAtIENT_DB_USERNAME=postgres
-PAtIENT_DB_PASSWORD=postgres
-PAtIENT_DB_NAME=patientdb
+PATIENT_DB_HOST=localhost
+PATIENT_DB_PORT=5432
+PATIENT_DB_USERNAME=postgres
+PATIENT_DB_PASSWORD=postgres
+PATIENT_DB_NAME=patientdb
+
+RABBITMQ_DEFAULT_USER=user
+RABBITMQ_DEFAULT_PASS=password
 
 RABBITMQ_USERNAME=user
 RABBITMQ_PASSWORD=password
