--- a/apps/api/.env.development
+++ b/apps/api/.env.development
@@ -1,6 +1,10 @@
 PORT=1111
 NODE_ENV=development
 
+
+RABBITMQ_DEFAULT_USER=user
+RABBITMQ_DEFAULT_PASS=password
+
 RABBITMQ_USERNAME=user
 RABBITMQ_PASSWORD=password
 RABBITMQ_HOST=rabbitmq:5672
