--- a/apps/api/.env.production
+++ b/apps/api/.env.production
@@ -1,6 +1,9 @@
 PORT=1111
 NODE_ENV=production
 
+RABBITMQ_DEFAULT_USER=user
+RABBITMQ_DEFAULT_PASS=password
+
 RABBITMQ_USERNAME=user
 RABBITMQ_PASSWORD=password
 RABBITMQ_HOST=rabbitmq:5672
