--- a/apps/auth/.env.production
+++ b/apps/auth/.env.production
@@ -7,6 +7,9 @@ AUTH_DB_USERNAME=postgres
 AUTH_DB_PASSWORD=postgres
 AUTH_DB_NAME=authdb
 
+RABBITMQ_DEFAULT_USER=user
+RABBITMQ_DEFAULT_PASS=password
+
 RABBITMQ_USERNAME=user
 RABBITMQ_PASSWORD=password
 RABBITMQ_HOST=rabbitmq:5672
