--- a/apps/patient/.env.production
+++ b/apps/patient/.env.production
@@ -7,7 +7,10 @@ PAtIENT_DB_USERNAME=postgres
 PAtIENT_DB_PASSWORD=postgres
 PAtIENT_DB_NAME=patientdb
 
-RABBITMQ_USERNAME=user
-RABBITMQ_PASSWORD=password
+RABBITMQ_DEFAULT_USER=guest
+RABBITMQ_DEFAULT_PASS=guest
+
+RABBITMQ_USERNAME=guest
+RABBITMQ_PASSWORD=guest
 RABBITMQ_HOST=rabbitmq:5672
 RABBITMQ_PATIENT_QUEUE=patient_queue
