feat: added NATS server

--- a/.env.development
+++ b/.env.development
@@ -6,3 +6,7 @@ RABBITMQ_PASSWORD=password
 RABBITMQ_HOST=rabbitmq:5672
 
 PORT=2000
+
+NATS_PASSWORD=password
+NATS_USERNAME=username
+NATS_SERVER_URL=nats://localhost:4222
