--- a/apps/patient/.env.production
+++ b/apps/patient/.env.production
@@ -14,3 +14,5 @@ RABBITMQ_USERNAME=guest
 RABBITMQ_PASSWORD=guest
 RABBITMQ_HOST=rabbitmq:5672
 RABBITMQ_PATIENT_QUEUE=patient_queue
+
+NATS_SERVER_URL=nats://localhost:4222
