--- a/apps/auth/.env.production
+++ b/apps/auth/.env.production
@@ -14,3 +14,5 @@ RABBITMQ_USERNAME=user
 RABBITMQ_PASSWORD=password
 RABBITMQ_HOST=rabbitmq:5672
 RABBITMQ_AUTH_QUEUE=auth_queue
+
+NATS_SERVER_URL=nats://localhost:4222
