feat: added mullti-database creation script

--- a/.env.development
+++ b/.env.development
@@ -6,3 +6,7 @@ RABBITMQ_PASSWORD=password
 RABBITMQ_HOST=rabbitmq:5672
 
 PORT=2000
+
+POSTGRES_USER=user
+POSTGRES_PASSWORD=password
+POSTGRES_DB=postgres
