fix: fixed docker host to resolve db conn err

--- a/apps/api/.env.production
+++ b/apps/api/.env.production
@@ -1,9 +1,14 @@
+###################################################
+# Application Configuration
+###################################################
 PORT=1111
 NODE_ENV=production
 
+###################################################
+# RabbitMQ Configuration
+###################################################
 RABBITMQ_DEFAULT_USER=user
 RABBITMQ_DEFAULT_PASS=password
-
 RABBITMQ_USERNAME=user
 RABBITMQ_PASSWORD=password
 RABBITMQ_HOST=rabbitmq:5672
