--- a/apps/auth/.env.production
+++ b/apps/auth/.env.production
@@ -1,15 +1,23 @@
+###################################################
+# Application Configuration
+###################################################
 PORT=2222
 NODE_ENV=production
 
-AUTH_DB_HOST=localhost
+###################################################
+# Database Configuration
+###################################################
+AUTH_DB_HOST=host.docker.internal
 AUTH_DB_PORT=5432
-AUTH_DB_USERNAME=postgres
-AUTH_DB_PASSWORD=postgres
+AUTH_DB_USERNAME=user
+AUTH_DB_PASSWORD=password
 AUTH_DB_NAME=authdb
 
+###################################################
+# RabbitMQ Configuration
+###################################################
 RABBITMQ_DEFAULT_USER=user
 RABBITMQ_DEFAULT_PASS=password
-
 RABBITMQ_USERNAME=user
 RABBITMQ_PASSWORD=password
 RABBITMQ_HOST=rabbitmq:5672
