--- a/apps/patient/.env.development
+++ b/apps/patient/.env.development
@@ -1,16 +1,24 @@
+###################################################
+# Application Configuration
+###################################################
 PORT=3333
 NODE_ENV=development
 
-PATIENT_DB_HOST=localhost
+###################################################
+# Database Configuration
+###################################################
+PATIENT_DB_HOST=host.docker.internal
 PATIENT_DB_PORT=5432
 PATIENT_DB_USERNAME=postgres
-PATIENT_DB_PASSWORD=postgres
-PATIENT_DB_NAME=patientdb
+PATIENT_DB_PASSWORD=password
+PATIENT_DB_NAME=postgres
 
-RABBITMQ_DEFAULT_USER=user
-RABBITMQ_DEFAULT_PASS=password
-
-RABBITMQ_USERNAME=user
-RABBITMQ_PASSWORD=password
+###################################################
+# RabbitMQ Configuration
+###################################################
+RABBITMQ_DEFAULT_USER=guest
+RABBITMQ_DEFAULT_PASS=guest
+RABBITMQ_USERNAME=guest
+RABBITMQ_PASSWORD=guest
 RABBITMQ_HOST=rabbitmq:5672
 RABBITMQ_PATIENT_QUEUE=patient_queue
