--- a/apps/patient/.env.production
+++ b/apps/patient/.env.production
@@ -1,15 +1,23 @@
+###################################################
+# Application Configuration
+###################################################
 PORT=3333
-NODE_ENV=development
+NODE_ENV=production
 
-PAtIENT_DB_HOST=localhost
-PAtIENT_DB_PORT=5432
-PAtIENT_DB_USERNAME=postgres
-PAtIENT_DB_PASSWORD=postgres
-PAtIENT_DB_NAME=patientdb
+###################################################
+# Database Configuration
+###################################################
+PATIENT_DB_HOST=host.docker.internal
+PATIENT_DB_PORT=5432
+PATIENT_DB_USERNAME=user
+PATIENT_DB_PASSWORD=password
+PATIENT_DB_NAME=patientdb
 
+###################################################
+# RabbitMQ Configuration
+###################################################
 RABBITMQ_DEFAULT_USER=guest
 RABBITMQ_DEFAULT_PASS=guest
-
 RABBITMQ_USERNAME=guest
 RABBITMQ_PASSWORD=guest
 RABBITMQ_HOST=rabbitmq:5672
