--- a/.env.development
+++ b/.env.development
@@ -5,8 +5,9 @@ RABBITMQ_USERNAME=user
 RABBITMQ_PASSWORD=password
 RABBITMQ_HOST=rabbitmq:5672
 
-PORT=2000
 
-POSTGRES_USER=user
+POSTGRES_USER=postgres
 POSTGRES_PASSWORD=password
 POSTGRES_DB=postgres
+POSTGRES_HOST=localhost
+POSTGRES_PORT=5432
